# ghga-metadata-utils

./: .mandatory_files  .static_files  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ghga_metadata_utils/: __init__.py
ghga_metadata_utils/generators/: jsonschemagen.py  pydanticgen.py
ghga_metadata_utils/validation_plugins/: jsonschema_validation.py
tests/fixtures/test_data/: invalid_submission.json  submission.json
tests/integration/: test_jsonschema_validation.py
