# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = ghga_metadata_utils
version = attr: ghga_metadata_utils.__version__
description = Utilities concerning the GHGA Metadata Schema
url = https://github.com/ghga-de/ghga-metadata-utils
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    linkml==1.2.15
    linkml-runtime==1.2.16
    linkml-validator==0.4.0

python_requires = >= 3.9

[options.extras_require]
dev =
    pytest==7.1.1
    pytest-cov==3.0.0
    mypy==0.942
    mypy-extensions==0.4.3
    pylint==2.13.3
    click==8.1.2
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    bandit==1.7.4
    pre-commit==2.17.0
    requests==2.27.1
    mkdocs==1.3.0

all =
    %(dev)s

[options.packages.find]
exclude = tests
